Support additional dalvik heapsize for high-end devices

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -805,6 +805,10 @@
     <string name="playground_website">Mainframe Access</string>
     <string name="playground_website_summary">Access the mainframe for issue reports and updates</string>
 
+    <string name="str_Backward">Back</string>
+    <string name="str_Reload">Refresh</string>
+    <string name="str_Forward">Forward</string>
+
     <string name="display_hacking">Display Modification</string>
 
     <string name="compatibility_mode_title">Compatibility Mode</string>
