Update website link activity and description [Playground]

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -803,7 +803,7 @@
     <string name="playground_panel_title">Playground</string>
 
     <string name="playground_website">Mainframe Access</string>
-    <string name="playground_website_summary">Access the mainframe for issue reports and updates</string>
+    <string name="playground_website_summary">Visit the Playground website for issue reporting, downloads, and information</string>
 
     <string name="str_Backward">Back</string>
     <string name="str_Reload">Refresh</string>
