--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -794,9 +794,6 @@
     <string name="compatibility_mode_title">Compatibility Mode</string>
     <string name="compatibility_mode_summary_on">Run apps in compatibility mode. (Requires reboot)</string>
     <string name="compatibility_mode_summary_off">Turn off compatibility mode to allow app layouts.</string>
-    
-    <string name="dual_pane_title">Dual-panel layout</string>
-    <string name="dual_pane_summary">Side-by-side display for apps that provide a dual-pane option</string>
 
     <string name="pref_tiled_rendering_title">Tile Rendering</string>
     <string name="pref_tiled_rendering_summary">Process the screen as individual blocks running in async</string>
@@ -874,6 +871,12 @@
     <string name="dpi">DPI</string>
     <string name="density_google_play">Couldn\'t open Google Play! Please open the application manually</string>
     <string name="density_warning">Changing density can cause adverse results. If issues are encountered, please return to step 1 and proceed</string>
+
+    <string name="dual_pane_title">Dual-panel layout</string>
+    <string name="dual_pane_summary">Side-by-side display for apps that provide a dual-pane option</string>
+
+    <string name="statusbar_override_title">Override statusbar</string>
+    <string name="statusbar_override_summary">Keep statusbar visible, even at lower density values</string>
 
     <string name="cyanogenmod_themes">CyanogenMod Themes</string>
 
