Restore lock screen extended options string values

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1056,6 +1056,12 @@
 
     <string name="lock_screen_title">Lock screen</string>
 
+    <!-- Lock Screen Options -->
+    <string name="lockscreen_wallpaper_title">Choose lockscreen wallpaper</string>
+    <string name="lockscreen_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
+    <string name="lockscreen_landscape_title">Horizontal lockscreen</string>
+    <string name="lockscreen_landscape_summary">Whether horizontal lockscreen orientation will be enabled</string>
+
     <!-- Lock Screen Shortcuts -->
     <string name="lockscreen_target_info">Drag the slider to targets to assign shortcuts</string>
     <string name="lockscreen_target_title">Lock screen shortcuts</string>
